...
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="enterNumber">Enter number</string>
    <string name="lat">Lat:</string>
    <string name="longitude">Longitude:</string>
    <string name="lookup" >Lookup</string>
    <string name="view">View</string>
    <string name="favourate">Favourite</string>
    <string name="latlgt">Lat---------Lng</string>

    <string name="sundb" translatable="false">sundb</string>
    <string name="searchRecord" translatable="false">searchRecord</string>
    <string name="latSearch" translatable="false">latSearch</string>
...
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="word">Word</string>
    <string name="hint">Enter a word</string>
    <string name="definition">Definition</string>
    <string name="search">Look up</string>
    <string name="save">Save</string>
    <string name="read">View</string>
    <string name="history">Search History</string>
    <string name="dic_database_name" translatable="false">database-dictionary</string>
    <string name="record_goes_here">Record goes here</string>
    <string name="dic_sharedPreferences_name" translatable="false">MyDictionary</string>
    <string name="question">Question: </string>
...
